@@ -3,7 +3,7 @@
 /**
  * Module Cms Link
  * Mise en place de liens dynamiques vers les pages cms
- * © h-hennes 2013-2014 
+ * © h-hennes 2013-2015 
  * http://www.h-hennes.fr/blog/
  */
 class CmsController extends CmsControllerCore
@@ -16,7 +16,7 @@ class CmsController extends CmsControllerCore
 		//Inclusion du module
 		include_once(dirname(__FILE__).'/../../../modules/eicmslinks/eicmslinks.php');
 		//Mise à jour des données des liens
-		$this->cms = EiCmsLinks::updateCmsLinksDisplay($this->cms);
+		$this->cms->content = EiCmsLinks::updateCmsLinksDisplay($this->cms->content);
 	}
 
 }
